force-app/main/default/objects/Material_Order__c/Material_Order__c.object-meta.xml
<CustomObject>
    <label>Material Order</label>
    <nameField>
        <displayFormat>MATERIALORDER-{0000000000}</displayFormat>
        <label>Material Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>