force-app/main/default/objects/Material_Order__c/fields/Charge_Client__c.field-meta.xml
<CustomField>
    <fullName>Charge_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Client</label>
    <type>Checkbox</type>
</CustomField>