force-app/main/default/objects/Material_Order__c/fields/Notes_Description__c.field-meta.xml
<CustomField>
    <fullName>Notes_Description__c</fullName>
    <label>Notes/Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>