force-app/main/default/objects/Material_Order__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Project__c.Krow__Archived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Krow__Project__c.Krow__Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Lead, Cold Lead, Hiring, Position Filled, Canceled, Complete</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Material Orders</relationshipLabel>
    <relationshipName>Material_Orders1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>