force-app/main/default/objects/Material_Order__c/fields/Receivable_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Date_Time__c</fullName>
    <label>Receivable Date/Time</label>
    <type>DateTime</type>
</CustomField>