force-app/main/default/objects/Material_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Takeoff</fullName>
                <default>true</default>
                <label>Takeoff</label>
            </value>
            <value>
                <fullName>Ready to Order</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Received/Complete</fullName>
            </value>
            <value>
                <fullName>Waiting on Payment from Client</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>