force-app/main/default/objects/Material_Order__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Account not in System, create a New Inventory Supplier Account</inlineHelpText>
    <label>Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Material Orders</relationshipLabel>
    <relationshipName>Material_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>