force-app/main/default/objects/Material_Order__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>